--- a/src/index.css
+++ b/src/index.css
@@ -11,3 +11,25 @@ code {
   font-family: source-code-pro, Menlo, Monaco, Consolas, "Courier New",
     monospace;
 }
+
+.input-error .PhoneInputInput {
+  height: 45px !important;
+  border-radius: 4px;
+  border: 1px solid #FF0040;
+  padding: 0px 12px;
+}
+
+.input-field .PhoneInputInput {
+  height: 45px !important;
+  border-radius: 4px;
+  border: 1px solid rgb(205, 202, 202);
+  padding: 0px 12px;
+}
+
+.input-field .PhoneInputInput:hover {
+  border: 1px solid rgb(22, 21, 21)
+}
+
+.PhoneInputInput:focus-visible {
+  outline: 1px solid #FF0040;
+}
