--- a/src/index.css
+++ b/src/index.css
@@ -1,21 +1,19 @@
 body {
   margin: 0;
-  font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", "Roboto", "Oxygen",
-    "Ubuntu", "Cantarell", "Fira Sans", "Droid Sans", "Helvetica Neue",
-    sans-serif;
+  font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", "Roboto", "Oxygen", "Ubuntu",
+    "Cantarell", "Fira Sans", "Droid Sans", "Helvetica Neue", sans-serif;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
 }
 
 code {
-  font-family: source-code-pro, Menlo, Monaco, Consolas, "Courier New",
-    monospace;
+  font-family: source-code-pro, Menlo, Monaco, Consolas, "Courier New", monospace;
 }
 
 .input-error .PhoneInputInput {
   height: 45px !important;
   border-radius: 4px;
-  border: 1px solid #FF0040;
+  border: 1px solid #ff0040;
   padding: 0px 12px;
 }
 
@@ -27,9 +25,9 @@ code {
 }
 
 .input-field .PhoneInputInput:hover {
-  border: 1px solid rgb(22, 21, 21)
+  border: 1px solid rgb(22, 21, 21);
 }
 
 .PhoneInputInput:focus-visible {
-  outline: 1px solid #FF0040;
+  outline: 1px solid #ff0040;
 }
