--- a/src/BigScheduler/css/style.css
+++ b/src/BigScheduler/css/style.css
@@ -1,7 +1,7 @@
 *,
 *::before,
 *::after {
-  box-sizing: border-box;
+    box-sizing: border-box;
 }
 
 .header1-text {
@@ -87,6 +87,7 @@ table.scheduler-table {
     padding: 0;
     border-spacing: 0;
     text-align: center;
+    height: fit-content;
 }
 
 table.scheduler-table {
@@ -103,7 +104,10 @@ table.scheduler-content-table {
 table.resource-table tr,
 table.scheduler-bg-table tr,
 table.scheduler-table tr {
-    border-bottom: 1px solid #e9e9e9
+    border-bottom: 1px solid #e9e9e9;
+
+    background-color: #fff;
+
 }
 
 table.resource-table th,
@@ -117,6 +121,7 @@ table.scheduler-table td {
 
 table.scheduler-bg-table th {
     border-right: 1px solid #e9e9e9;
+    background-color: #ffffff;
 }
 
 table.resource-table tr th:last-child,
@@ -177,6 +182,8 @@ table.scheduler-table tr:last-child td {
     white-space: nowrap;
     color: #fff;
     padding-right: 20px !important;
+    /* margin-bottom: 4rem; */
+    height: 4rem;
 }
 
 .overflow-text {
@@ -244,12 +251,70 @@ table.scheduler-table tr:last-child td {
 }
 
 .slot-cell {
-    padding-left: 4px;
-    padding-right: 4px;
+    /* padding-left: 4px;
+    padding-right: 4px; */
 }
 
 .slot-text {
     display: inline-block;
     padding-left: 4px;
     padding-right: 4px;
+}
+
+.btn {
+    background: #f6f6f6;
+    background-image: -webkit-linear-gradient(top, #f6f6f6, #eeeeee);
+    background-image: -moz-linear-gradient(top, #f6f6f6, #eeeeee);
+    background-image: -ms-linear-gradient(top, #f6f6f6, #eeeeee);
+    background-image: -o-linear-gradient(top, #f6f6f6, #eeeeee);
+    background-image: linear-gradient(to bottom, #f6f6f6, #eeeeee);
+    -webkit-border-radius: 4;
+    -moz-border-radius: 4;
+    border-radius: 4px;
+    /* font-family: Arial; */
+    color: #666666;
+    font-size: 1rem;
+    /* padding: 10px 20px 10px 20px; */
+    border: solid #bbb 1px;
+    text-decoration: none;
+}
+
+.btn-selected {
+    background: #f6f6f6;
+    background-image: -webkit-linear-gradient(top, #d0d0d0, #d8d8d8);
+    background-image: -moz-linear-gradient(top, #d0d0d0, #d8d8d8);
+    background-image: -ms-linear-gradient(top, #d0d0d0, #d8d8d8);
+    background-image: -o-linear-gradient(top, #d0d0d0, #d8d8d8);
+    background-image: linear-gradient(to bottom, #d0d0d0, #d8d8d8);
+    -webkit-border-radius: 4;
+    -moz-border-radius: 4;
+    border-radius: 4px;
+    /* font-family: Arial; */
+    color: #666666;
+    font-size: 1rem;
+    /* padding: 10px 20px 10px 20px; */
+    border: solid #666666 1px;
+    text-decoration: none;
+}
+
+.btn:hover {
+    background: #f6f6f6;
+    background-image: -webkit-linear-gradient(top, #f6f6f6, #eeeeee);
+    background-image: -moz-linear-gradient(top, #f6f6f6, #eeeeee);
+    background-image: -ms-linear-gradient(top, #f6f6f6, #eeeeee);
+    background-image: -o-linear-gradient(top, #f6f6f6, #eeeeee);
+    background-image: linear-gradient(to bottom, #f6f6f6, #eeeeee);
+    text-decoration: none;
+}
+
+.stickyCell {
+    position: sticky !important;
+    left: 0 !important;
+    background-color: $background-color !important;
+    z-index: 10 !important;
+
+    /* &--header {
+        @extend .stickyCell;
+        z-index: 20 !important; // Header cell need higher z-index then row cells to show on top of them when scrolled vertically
+    } */
 }
