--- a/src/BigScheduler/css/style.css
+++ b/src/BigScheduler/css/style.css
@@ -91,20 +91,20 @@ table.scheduler-table {
 }
 
 table.scheduler-table {
-    border: 1px solid #e9e9e9;
+    /* border: 1px solid #e9e9e9; */
 }
 
 table.scheduler-content-table {
     margin: 0;
     padding: 0;
-    border: 0 solid #e9e9e9;
+    /* border: 0 solid #e9e9e9; */
     border-spacing: 0;
 }
 
 table.resource-table tr,
 table.scheduler-bg-table tr,
 table.scheduler-table tr {
-    border-bottom: 1px solid #e9e9e9;
+    /* border-bottom: 1px solid #e9e9e9; */
 
     background-color: #fff;
 
@@ -116,7 +116,7 @@ table.resource-table td,
 table.scheduler-bg-table td,
 table.scheduler-table td {
     border-right: 1px solid #e9e9e9;
-    border-bottom: 1px solid #e9e9e9;
+    /* border-bottom: 1px solid #e9e9e9; */
 }
 
 table.scheduler-bg-table th {
@@ -172,6 +172,11 @@ table.scheduler-table tr:last-child td {
 
 .event-container {
     position: relative;
+}
+
+.border-cell {
+    border-left: 1px solid #eeeeee;
+    border-right: 1px solid #eeeeee;
 }
 
 .event-item {
@@ -328,4 +333,54 @@ table.scheduler-table tr:last-child td {
         @extend .stickyCell;
         z-index: 20 !important; // Header cell need higher z-index then row cells to show on top of them when scrolled vertically
     } */
+}
+
+.projectselctor {
+    height: 2rem;
+    border: 1px solid #eee;
+    list-style-type: inherit;
+    font-size: 1rem;
+    font-weight: 600;
+    padding-left: 1rem;
+    height: 2.2rem;
+}
+
+.projectselctor:focus {
+    height: 2rem;
+    border: 1px solid #eee;
+    list-style-type: inherit;
+}
+
+input::-webkit-calendar-picker-indicator {
+    opacity: 100;
+    background-image: -webkit-linear-gradient(top, #eeeeee, #e4e4e4);
+    background-image: -moz-linear-gradient(top, #eeeeee, #e4e4e4);
+    background-image: -ms-linear-gradient(top, #eeeeee, #e4e4e4);
+    background-image: -o-linear-gradient(top, #eeeeee, #e4e4e4);
+    background-image: linear-gradient(to bottom, #eeeeee, #e4e4e4);
+    border: 1px solid #eeeeee;
+    display: flex;
+    justify-content: center;
+    align-self: center;
+    padding-top: 1rem;
+    height: 2.2rem !important;
+}
+
+input::-webkit-calendar-picker-indicator:active {
+    opacity: 100;
+    background-image: -webkit-linear-gradient(top, #eeeeee, #e4e4e4);
+    background-image: -moz-linear-gradient(top, #eeeeee, #e4e4e4);
+    background-image: -ms-linear-gradient(top, #eeeeee, #e4e4e4);
+    background-image: -o-linear-gradient(top, #eeeeee, #e4e4e4);
+    background-image: linear-gradient(to bottom, #eeeeee, #e4e4e4);
+    border: 1px solid #eeeeee;
+    display: flex;
+    justify-content: center;
+    align-self: center;
+    padding-top: 1rem;
+    height: 2.2rem !important;
+}
+
+.availabilitySelector:hover {
+    background-color: #e1e1e1;
 }
