--- a/src/BigScheduler/css/style.css
+++ b/src/BigScheduler/css/style.css
@@ -88,6 +88,7 @@ table.scheduler-table {
     border-spacing: 0;
     text-align: center;
     height: fit-content;
+    position: relative;
 }
 
 table.scheduler-table {
