--- a/src/index.css
+++ b/src/index.css
@@ -540,3 +540,7 @@ input::-webkit-calendar-picker-indicator:active {
 .availabilitySelector:hover {
   background-color: #e1e1e1;
 }
+
+.MuiOutlinedInput-notchedOutline {
+  border-radius: 0.2rem !important;
+}
