--- a/src/index.css
+++ b/src/index.css
@@ -105,7 +105,7 @@ code {
 .MuiAutocomplete-root,
 .MuiOutlinedInput-root,
 .MuiInputBase-sizeSmall {
-  height: 5rem;
+  min-height: 3rem;
   padding: 0 !important;
 }
 
