--- a/src/index.css
+++ b/src/index.css
@@ -253,8 +253,18 @@ table.scheduler-table tr:last-child td {
 .timeline-event {
   position: absolute;
   cursor: pointer;
+  padding: 0;
 }
 
+.timeline-event:hover :nth-child(2) {
+  border-left: 2px dotted white;
+  border-image: 150%;
+}
+
+.timeline-event:hover :nth-child(3) {
+  border-right: 2px dotted white;
+  border-image: 150%;
+}
 
 .day-event {
   position: relative;
@@ -293,18 +303,25 @@ table.scheduler-table tr:last-child td {
 }
 
 .event-item {
-  /* margin: 3px 0; */
+  /* margin: 3px 0;
   /* width: 100%; */
-  overflow: hidden;
+  /* overflow: hidden;
   text-overflow: ellipsis;
   white-space: nowrap;
-  color: #fff;
+  color: #fff; */
   /* padding-right: 20px !important; */
   /* margin-bottom: 4rem; */
   /* height: 5rem; */
   /* opacity: 0.5; */
-  display: flex;
-  align-items: start;
+  /* display: flex;
+  align-items: start;  */
+  margin: 1px 0;
+  width: 100%;
+  overflow: hidden;
+  text-overflow: ellipsis;
+  white-space: nowrap;
+  color: #fff;
+  padding-right: 20px !important;
 }
 
 .overflow-text {
