--- a/src/index.css
+++ b/src/index.css
@@ -324,6 +324,14 @@ table.scheduler-table tr:last-child td {
   padding-right: 20px !important;
 }
 
+.addHover :hover {
+
+  border-right: 3px dotted white;
+  z-index: 2;
+  color: black;
+  text-align: right;
+}
+
 .overflow-text {
   overflow: hidden;
   text-overflow: ellipsis;
