fix(schedulesview): Fixed Schedules from API and bar length fix)

--- a/src/index.css
+++ b/src/index.css
@@ -295,6 +295,7 @@ table.scheduler-table tr:last-child td {
 
 .event-container {
   position: relative;
+  border: "1px red solid"
 }
 
 .border-cell {
