--- a/src/index.css
+++ b/src/index.css
@@ -257,8 +257,14 @@ table.scheduler-table tr:last-child td {
 }
 
 .timeline-event:hover :nth-child(2) {
-  border-left: 2px dotted white;
+  /* border-left: 2px dotted white;
   border-image: 150%;
+  margin-left: 5px !important;
+  border-image: url("https://i.stack.imgur.com/wLdVc.png") 2 round; */
+  background-image: linear-gradient(#fff 33%, rgba(255, 255, 255, 0) 0%);
+  background-position: right;
+  background-size: 6px 6px;
+  background-repeat: repeat-y;
 }
 
 .timeline-event:hover :nth-child(3) {
