--- a/src/index.css
+++ b/src/index.css
@@ -179,7 +179,7 @@ code {
 
 .scheduler-content {
   position: relative;
-  z-index: 2;
+  z-index: 1;
 }
 
 .scheduler-bg {
@@ -212,6 +212,7 @@ table.scheduler-content-table {
   padding: 0;
   /* border: 0 solid #e9e9e9; */
   border-spacing: 0;
+  position: relative;
 }
 
 table.resource-table tr,
@@ -260,7 +261,7 @@ table.scheduler-table tr:last-child td {
 
 .timeline-event:hover :nth-child(2) {
   border-left: 3px dotted #d0d0d0;
-  margin-left: 2px;
+  margin-left: 4px;
   height: 2rem;
   margin-top: 10px;
   margin-bottom: auto;
@@ -430,10 +431,8 @@ table.scheduler-table tr:last-child td {
   -webkit-border-radius: 4;
   -moz-border-radius: 4;
   border-radius: 4px;
-  /* font-family: Arial; */
   color: #666666;
   font-size: 1rem;
-  /* padding: 10px 20px 10px 20px; */
   border: solid #bbb 1px;
   text-decoration: none;
 }
@@ -448,10 +447,8 @@ table.scheduler-table tr:last-child td {
   -webkit-border-radius: 4;
   -moz-border-radius: 4;
   border-radius: 4px;
-  /* font-family: Arial; */
   color: #666666;
   font-size: 1rem;
-  /* padding: 10px 20px 10px 20px; */
   border: solid #666666 1px;
   text-decoration: none;
 }
@@ -525,6 +522,23 @@ table.scheduler-table tr:last-child td {
     } */
 }
 
+.selector {
+  background-image: -webkit-linear-gradient(top, #f6f6f6, #eeeeee);
+  background-image: -moz-linear-gradient(top, #f6f6f6, #eeeeee);
+  background-image: -ms-linear-gradient(top, #f6f6f6, #eeeeee);
+  background-image: -o-linear-gradient(top, #f6f6f6, #eeeeee);
+  background-image: linear-gradient(to bottom, #f6f6f6, #eeeeee);
+}
+
+.selector-selected {
+  background-image: -webkit-linear-gradient(top, #d0d0d0, #d8d8d8);
+  background-image: -moz-linear-gradient(top, #d0d0d0, #d8d8d8);
+  background-image: -ms-linear-gradient(top, #d0d0d0, #d8d8d8);
+  background-image: -o-linear-gradient(top, #d0d0d0, #d8d8d8);
+  background-image: linear-gradient(to bottom, #d0d0d0, #d8d8d8);
+}
+
+
 .projectselctor {
   height: 2rem;
   border: 1px solid #eee;
@@ -582,4 +596,9 @@ input::-webkit-calendar-picker-indicator:active {
 
 .MuiSelect-select-MuiInputBase-input-MuiOutlinedInput-input {
   padding: 0 !important
+}
+
+.MuiAutocomplete-groupLabel {
+  font-size: larger;
+  color: "red" !important
 }
